enforce disabled target availability
